// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseMotion /> (native) should render children inside BaseMotionBox 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {},
        {
          "opacity": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      color="surface.text.gray.normal"
      data-blade-component="text"
      fontFamily="text"
      fontSize={100}
      fontStyle="normal"
      fontWeight="regular"
      letterSpacing={50}
      lineHeight={100}
      style={
        [
          {
            "color": "hsla(0, 0%, 2%, 1)",
            "fontFamily": "Inter",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": -0.18200000000000002,
            "lineHeight": 20,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      motion child
    </Text>
  </View>
</View>
`;

exports[`<BaseMotion /> (native) should wrap the child when using BaseMotionEnhancerBox 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {},
        {
          "opacity": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      color="surface.text.gray.normal"
      data-blade-component="text"
      fontFamily="text"
      fontSize={100}
      fontStyle="normal"
      fontWeight="regular"
      letterSpacing={50}
      lineHeight={100}
      style={
        [
          {
            "color": "hsla(0, 0%, 2%, 1)",
            "fontFamily": "Inter",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": -0.18200000000000002,
            "lineHeight": 20,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      enhanced child
    </Text>
  </View>
</View>
`;
